--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>お問い合わせ|狭間書房</title>
+  <title>お問い合わせ | 狭間書房</title>
  <style>
 html, body {
   height: 100%;
@@ -22,115 +22,108 @@ body {
   line-height: 1.8;
 }
 
-    /* ヘッダー */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1em 2em;
-      background-color: #32a9cd;
-      color: #fff;
-      flex-shrink: 0;
-      gap: 2em;
-      box-sizing: border-box;
-      width: 100%;
-    }
-    .title-wrapper {
-      display: flex;
-      flex-direction: column;
-    }
-    .title-wrapper a {
-      text-decoration: none;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      cursor: pointer;
-    }
-    .title-wrapper a:hover h1 {
-      opacity: 0.8;
-      transition: opacity 0.3s ease;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 3em;
-      letter-spacing: 0.1em;
-      line-height: 1;
-      border: none;
-      font-family: 'Tsunagi Gothic Black', sans-serif;
-      font-weight: 700;
-    }
-    .subtitle {
-      margin: 0;
-      padding: 0;
-      line-height: 1;
-      font-size: 1em;
-      text-align: center;
-      color: #fff;
-    }
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em 2em;
+  background-color: #32a9cd;
+  color: #fff;
+  flex-shrink: 0;
+  gap: 2em;
+  box-sizing: border-box;
+  width: 100%;
+}
 
-    /* 検索 */
-    .search {
-      display: flex;
-      align-items: center;
-      gap: 0.5em;
-      flex-shrink: 0;
-      margin-left: auto;
-    }
-    .search form {
-      display: flex;
-      align-items: center;
-      gap: 0.5em;
-    }
-    .search input {
-      padding: 4px;
-      border: 2px solid #003366;
-      border-radius: 4px;
-      width: 150px;
-      background-color: #fff;
-      color: #003366;
-    }
-    .search input::placeholder {
-      color: #003366aa;
-    }
-    .search button {
-      padding: 4px 6px;
-      border-radius: 4px;
-      border: none;
-      background-color: #003366;
-      color: #fff;
-      cursor: pointer;
-      white-space: nowrap;
-      flex-shrink: 0;
-    }
-    .search button:hover {
-      background-color: #001f33;
-    }
+.title-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 
-    /* ナビゲーション */
-    nav {
-      text-align: center;
-      padding: 1em 0;
-      background-color: #f0f0f0;
-      flex-shrink: 0;
-      overflow-x: auto;
-      box-sizing: border-box;
-      width: 100%;
-    }
-    nav a {
-      color: #003366;
-      margin: 0 1em;
-      text-decoration: none;
-      font-weight: bold;
-      display: inline-block;
-      white-space: nowrap;
-    }
-    nav a:hover {
-      color: #32a9cd;
-    }
-    nav a.active {
-      color: #32a9cd;
-      border-bottom: 2px solid #32a9cd;
-    }
+.title-wrapper a {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 3em;
+  letter-spacing: 0.1em;
+  line-height: 1;
+  border: none;
+  font-family: 'Tsunagi Gothic Black', sans-serif;
+  font-weight: 700;
+}
+
+.subtitle {
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-size: 1em;
+  text-align: center;
+  color: #fff;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  flex-shrink: 0;
+  margin-left: auto;
+}
+
+.search form {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.search input {
+  padding: 4px;
+  border: 2px solid #003366;
+  border-radius: 4px;
+  width: 150px;
+  background-color: #fff;
+  color: #003366;
+}
+
+.search button {
+  padding: 4px 6px;
+  border-radius: 4px;
+  border: none;
+  background-color: #003366;
+  color: #fff;
+  cursor: pointer;
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+
+nav {
+  text-align: center;
+  padding: 1em 0;
+  background-color: #f0f0f0;
+  flex-shrink: 0;
+  overflow-x: auto;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+nav a {
+  color: #003366;
+  margin: 0 1em;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+nav a.active {
+  color: #32a9cd;
+  border-bottom: 2px solid #32a9cd;
+}
 
 .content {
   max-width: 1000px;
@@ -352,7 +345,7 @@ footer {
 <body>
   <header>
     <div class="title-wrapper">
-      <a href="https://hazamashobo.github.io/main/index.html">
+      <a href="https://hazamashobo.github.io/main/">
         <h1>狭間書房</h1>
         <p class="subtitle">Hazama Publishing</p>
       </a>
@@ -366,10 +359,10 @@ footer {
   </header>
 
   <nav>
-    <a href="https://hazamashobo.github.io/main/index.html">ホーム</a>
-    <a href="https://hazamashobo.github.io/company/index.html">狭間書房について</a>
-    <a href="https://hazamashobo.github.io/books/index.html">刊行物</a>
-    <a href="https://hazamashobo.github.io/contact/index.html" class="active">お問い合わせ</a>
+    <a href="https://hazamashobo.github.io/main/">ホーム</a>
+    <a href="https://hazamashobo.github.io/company/">狭間書房について</a>
+    <a href="https://hazamashobo.github.io/books/">刊行物</a>
+    <a href="https://hazamashobo.github.io/contact/" class="active">お問い合わせ</a>
   </nav>
 
   <div class="content">
@@ -390,12 +383,12 @@ footer {
         <option value="ひのまる構図">ひのまる構図</option>
         <option value="黒子を星座に">黒子を星座に</option>
         <option value="RPGさんぽ概説">RPGさんぽ概説</option>
-        <option value="日本の鏡スポット">日本の鏡スポット</option>
+        <option value="日本の顔スポット">日本の顔スポット</option>
         <option value="千年幸福論">千年幸福論</option>
         <option value="カレーのご飯は冷たい方が美味しい">カレーのご飯は冷たい方が美味しい</option>
         <option value="LIMINAL SPACE 100">LIMINAL SPACE 100</option>
         <option value="花火禁止区域ができるまで">花火禁止区域ができるまで</option>
-        <option value="遅刻しないために">遅刻しないために</option>
+        <option value="配送遅刻しないために">配送遅刻しないために</option>
       </select>
     </div>
 
@@ -513,26 +506,37 @@ footer {
 
     function showPDFConfirmPage() {
       document.body.innerHTML = `
-        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; flex-wrap: wrap; gap: 1em; width: 100%; box-sizing: border-box;">
-          <div><h1 style="margin: 0; font-size: 3em; color: #fff;">狭間書房</h1><p style="margin: 0; color: #fff;">Hazama Publishing</p></div>
+        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; gap: 2em; box-sizing: border-box; width: 100%;">
+          <div class="title-wrapper">
+            <a href="https://hazamashobo.github.io/main/" style="text-decoration: none; color: #fff; display: flex; flex-direction: column; cursor: pointer;">
+              <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700;">狭間書房</h1>
+              <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
+            </a>
+          </div>
+          <div style="display: flex; align-items: center; gap: 0.5em; flex-shrink: 0; margin-left: auto;">
+            <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center; gap: 0.5em;">
+              <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius: 4px; width: 150px; background-color: #fff; color: #003366;">
+              <button type="submit" style="padding: 4px 6px; border-radius: 4px; border: none; background-color: #003366; color: #fff; cursor: pointer; white-space: nowrap; flex-shrink: 0;">検索</button>
+            </form>
+          </div>
         </header>
-        <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; width: 100%; box-sizing: border-box;">
-  <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">ホーム</a>
-  <a href="https://hazamashobo.github.io/company/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">狭間書房について</a>
-  <a href="https://hazamashobo.github.io/books/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">刊行物</a>
-  <a href="https://hazamashobo.github.io/contact/index.html" style="color: #32a9cd; margin: 0 1em; text-decoration: none; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
-</nav>
+        <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; flex-shrink: 0; overflow-x: auto; box-sizing: border-box; width: 100%;">
+          <a href="https://hazamashobo.github.io/main/" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap;">ホーム</a>
+          <a href="https://hazamashobo.github.io/company/" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap;">狭間書房について</a>
+          <a href="https://hazamashobo.github.io/books/" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap;">刊行物</a>
+          <a href="https://hazamashobo.github.io/contact/" style="color: #32a9cd; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
+        </nav>
         <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em 1em;">
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:2em 1.5em; border-radius:12px; border:2px solid #32a9cd;">
               <h1 style="color:#003366; font-size:2em; margin-bottom:1em;">落丁部分のPDFを送信しました</h1>
-              <p style="color:#32a9cd; font-size:1.1em; margin-bottom:2em;">下記のボタンから<br>ご確認いただけます。</p>
+              <p style="color:#32a9cd; font-size:1.1em; margin-bottom:2em;">下記のボタンからご確認いただけます。</p>
               <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:AP:1e604728-298e-4c7d-aaf9-66f5996ba6f7'" style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%); color:white; border:none; padding:1em 2em; font-size:1em; border-radius:25px; cursor:pointer; margin-bottom:1em; width:100%; box-sizing: border-box;">PDFを確認する</button>
               <button onclick="window.location.href='https://hazamashobo.github.io/main/index.html'" style="background:transparent; color:#32a9cd; border:2px solid #32a9cd; padding:0.8em 2em; font-size:1em; border-radius:25px; cursor:pointer; width:100%; box-sizing: border-box;">ホームに戻る</button>
             </div>
           </div>
         </div>
-        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房　（5/33）</p></footer>
+        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房</p></footer>
       `;
       document.body.style.display = 'flex';
       document.body.style.flexDirection = 'column';
@@ -541,15 +545,26 @@ footer {
 
     function showThankYouPage() {
       document.body.innerHTML = `
-        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; flex-wrap: wrap; gap: 1em; width: 100%; box-sizing: border-box;">
-          <div><h1 style="margin: 0; font-size: 3em; color: #fff;">狭間書房</h1><p style="margin: 0; color: #fff;">Hazama Publishing</p></div>
+        <header style="display: flex; justify-content: space-between; align-items: center; padding: 1em 2em; background-color: #32a9cd; color: #fff; flex-shrink: 0; gap: 2em; box-sizing: border-box; width: 100%;">
+          <div class="title-wrapper">
+            <a href="https://hazamashobo.github.io/main/" style="text-decoration: none; color: #fff; display: flex; flex-direction: column; cursor: pointer;">
+              <h1 style="margin: 0; font-size: 3em; letter-spacing: 0.1em; line-height: 1; border: none; font-family: 'Tsunagi Gothic Black', sans-serif; font-weight: 700;">狭間書房</h1>
+              <p style="margin: 0; padding: 0; line-height: 1; font-size: 1em; text-align: center; color: #fff;">Hazama Publishing</p>
+            </a>
+          </div>
+          <div style="display: flex; align-items: center; gap: 0.5em; flex-shrink: 0; margin-left: auto;">
+            <form action="https://hazamashobo.github.io/result/" method="get" style="display: flex; align-items: center; gap: 0.5em;">
+              <input type="text" name="q" placeholder="キーワード入力" style="padding: 4px; border: 2px solid #003366; border-radius: 4px; width: 150px; background-color: #fff; color: #003366;">
+              <button type="submit" style="padding: 4px 6px; border-radius: 4px; border: none; background-color: #003366; color: #fff; cursor: pointer; white-space: nowrap; flex-shrink: 0;">検索</button>
+            </form>
+          </div>
         </header>
-       <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; width: 100%; box-sizing: border-box;">
-  <a href="https://hazamashobo.github.io/main/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">ホーム</a>
-  <a href="https://hazamashobo.github.io/company/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">狭間書房について</a>
-  <a href="https://hazamashobo.github.io/books/index.html" style="color: #003366; margin: 0 1em; text-decoration: none;">刊行物</a>
-  <a href="https://hazamashobo.github.io/contact/index.html" style="color: #32a9cd; margin: 0 1em; text-decoration: none; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
-</nav>
+        <nav style="text-align: center; padding: 1em 0; background-color: #f0f0f0; flex-shrink: 0; overflow-x: auto; box-sizing: border-box; width: 100%;">
+          <a href="https://hazamashobo.github.io/main/" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap;">ホーム</a>
+          <a href="https://hazamashobo.github.io/company/" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap;">狭間書房について</a>
+          <a href="https://hazamashobo.github.io/books/" style="color: #003366; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap;">刊行物</a>
+          <a href="https://hazamashobo.github.io/contact/" style="color: #32a9cd; margin: 0 1em; text-decoration: none; font-weight: bold; display: inline-block; white-space: nowrap; border-bottom: 2px solid #32a9cd;">お問い合わせ</a>
+        </nav>
         <div style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2em 1em;">
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:2em 1.5em; border-radius:12px; border:2px solid #32a9cd;">
@@ -559,7 +574,7 @@ footer {
             </div>
           </div>
         </div>
-        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房　（-/33）</p></footer>
+        <footer style="background-color: #32a9cd; color: #ffffff; text-align: center; padding: 1em; flex-shrink: 0; margin-top: auto; width: 100%; box-sizing: border-box;"><p style="margin: 0;">© 2025 狭間書房</p></footer>
       `;
       document.body.style.display = 'flex';
       document.body.style.flexDirection = 'column';
