--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ body {
           <div style="max-width:600px; width:100%; text-align:center;">
             <div style="background:linear-gradient(135deg, #f8fbfc 0%, #e8f4f8 100%); padding:3em; border-radius:12px; border:2px solid #32a9cd;">
               <h1 style="color:#003366; font-size:2em; margin-bottom:1em;">落丁部分のPDFを<br>送信しました</h1>
-              <p style="color:#32a9cd; font-size:1em; margin-bottom:2em;">下記のボタンからご確認いただけます。</p>
+              <p style="color:#32a9cd; font-size:1em; margin-bottom:1em;">下記のボタンから<br>ご確認いただけます。</p>
               <button onclick="window.location.href='https://acrobat.adobe.com/id/urn:aaid:sc:AP:1e604728-298e-4c7d-aaf9-66f5996ba6f7'"
                       style="background:linear-gradient(135deg, #32a9cd 0%, #267fa1 100%);
                              color:white; border:none; padding:1em 3em;
